--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-calendar": "^0.23.6",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "emailjs": "^2.0.0",
